--- a/src/components/NewUser/UserForm.css
+++ b/src/components/NewUser/UserForm.css
@@ -1,13 +1,3 @@
-.userForm {
-    padding: 1rem;
-    background-color: rgb(255, 216, 144);
-    margin: 2rem auto;
-    width: 50rem;
-    max-width: 95%;
-    border-radius: 12px;
-    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
-  }
-
 .userForm h2 {
     text-align: center;
 }
@@ -56,4 +46,33 @@
     color: white;
     border-radius: 12px;
     margin-right: 1rem;
+  }
+
+  /* DIVIDE */
+
+  .input {
+    margin: 2rem auto;
+    padding: 1rem;
+    width: 90%;
+    max-width: 40rem;
+  }
+  
+  .input label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+  }
+  
+  .input input {
+    font: inherit;
+    display: block;
+    width: 100%;
+    border: 1px solid #ccc;
+    padding: 0.15rem;
+    margin-bottom: 0.5rem;
+  }
+  
+  .input input:focus {
+    outline: none;
+    border-color: #4f005f;
   }
