--- a/src/components/user/UserItem.css
+++ b/src/components/user/UserItem.css
@@ -1,4 +1,4 @@
-.user-item {
+/* .user-item {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -35,4 +35,4 @@
     border: 1px solid white;
     padding: 0.5rem;
     border-radius: 12px;
-  }
+  } */
