--- a/src/components/user/Users.css
+++ b/src/components/user/Users.css
@@ -1,4 +1,4 @@
-.users {
+/* .users {
     padding: 1rem;
     background-color: rgb(31, 31, 31);
     margin: 2rem auto;
@@ -6,4 +6,4 @@
     max-width: 95%;
     border-radius: 12px;
     box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
-  }
+  } */
